Fixing layout on mobile

--- a/assets/_sass/_keynotelist.scss
+++ b/assets/_sass/_keynotelist.scss
@@ -48,8 +48,8 @@ div.keynote-full {
 @media (max-width: 500px) {
 	section.keynotes-front {
 		a {
-			width: 150px;
-			height: 150px;
+			width: 32%;
+		height: 150px
 		}
 	}
 	div.keynote-full {
